fix: using newer Java method