@@ -26,7 +26,7 @@ import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.security.SecureRandom;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 import javax.annotation.Nonnull;
@@ -179,7 +179,7 @@ final class RestClient implements AutoCloseable {
             if (!body.isEmpty()) {
                 try {
                     final JsonNode root = objectMapper.readTree(body);
-                    for (String field : Arrays.asList("message", "error_message", "error")) {
+                    for (String field : List.of("message", "error_message", "error")) {
                         final JsonNode node = root.findValue(field);
                         if (node != null) {
                             reason = node.asText();
